- updated to latest SCROLL version

--- a/scroll/index.html
+++ b/scroll/index.html
@@ -65,9 +65,7 @@
         <span class="kind">package</span>
       </span>
       <span class="symbol">
-        <a title="" href="../index.html">
-              <span class="name">root</span>
-            </a>
+        <a title="" href="../index.html"><span class="name">root</span></a>
       </span>
       
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="_root_">root</a></dd></dl></div>
@@ -99,10 +97,7 @@
         <span class="kind">package</span>
       </span>
       <span class="symbol">
-        <a title="This package most notable provides the scroll.internal.Compartment trait for
-implementing an objectified collaboration with a limited number of participating roles and a fixed scope." href="internal/index.html">
-              <span class="name">internal</span>
-            </a>
+        <a title="This package most notable provides the scroll.internal.Compartment trait for implementing an objectified collaboration with a limited number of participating roles and a fixed scope." href="internal/index.html"><span class="name">internal</span></a>
       </span>
       
       <p class="shortcomment cmt">This package most notable provides the <a href="internal/Compartment.html" class="extype" name="scroll.internal.Compartment">scroll.internal.Compartment</a> trait for
