--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
         <span class="kind">package</span>
       </span>
       <span class="symbol">
-        <a title="" href="scroll/index.html">
-              <span class="name">scroll</span>
-            </a>
+        <a title="" href="scroll/index.html"><span class="name">scroll</span></a>
       </span>
       
       
