- doc for latest SCROLL release (1.5)

--- a/scroll/internal/SCROLLDynamic.html
+++ b/scroll/internal/SCROLLDynamic.html
@@ -248,6 +248,10 @@ like logging (<a href="util/Log$.html" class="extype" name="scroll.internal.util
                         <a href="Dispatchable.html" title="This Trait specifies a general interface for reflectively invoking methods.">Dispatchable</a>
                       </li><li class="current-entities indented2">
                         <span class="separator"></span>
+                        <a class="class" href="IPlayer.html" title="Wrapper class to add basic functionality to roles and its players as unified types."></a>
+                        <a href="IPlayer.html" title="Wrapper class to add basic functionality to roles and its players as unified types.">IPlayer</a>
+                      </li><li class="current-entities indented2">
+                        <span class="separator"></span>
                         <a class="trait" href="MultiCompartment.html" title="This Trait allows for implementing an objectified collaboration with a limited number of participating roles and a fixed scope."></a>
                         <a href="MultiCompartment.html" title="This Trait allows for implementing an objectified collaboration with a limited number of participating roles and a fixed scope.">MultiCompartment</a>
                       </li><li class="current-entities indented2">
