--- a/scroll/internal/index.html
+++ b/scroll/internal/index.html
@@ -238,6 +238,10 @@ like logging (<a href="util/Log$.html" class="extype" name="scroll.internal.util
                         <a href="Dispatchable.html" title="This Trait specifies a general interface for reflectively invoking methods.">Dispatchable</a>
                       </li><li class="current-entities indented2">
                         <span class="separator"></span>
+                        <a class="class" href="IPlayer.html" title="Wrapper class to add basic functionality to roles and its players as unified types."></a>
+                        <a href="IPlayer.html" title="Wrapper class to add basic functionality to roles and its players as unified types.">IPlayer</a>
+                      </li><li class="current-entities indented2">
+                        <span class="separator"></span>
                         <a class="trait" href="MultiCompartment.html" title="This Trait allows for implementing an objectified collaboration with a limited number of participating roles and a fixed scope."></a>
                         <a href="MultiCompartment.html" title="This Trait allows for implementing an objectified collaboration with a limited number of participating roles and a fixed scope.">MultiCompartment</a>
                       </li><li class="current-entities indented2">
@@ -338,6 +342,23 @@ into your own specific compartment class or create an anonymous instance.</p><h4
       </span>
       
       <p class="shortcomment cmt">This Trait specifies a general interface for reflectively invoking methods.</p>
+    </li><li name="scroll.internal.IPlayer" visbl="pub" class="indented0 " data-isabs="true" fullComment="yes" group="Ungrouped">
+      <a id="IPlayer[T&lt;:AnyRef]extendsAnyRef"></a><a id="IPlayer[T&lt;:AnyRef]:IPlayer[T]"></a>
+      <span class="permalink">
+      <a href="../../scroll/internal/index.html#IPlayer[T&lt;:AnyRef]extendsAnyRef" title="Permalink">
+        <i class="material-icons"></i>
+      </a>
+    </span>
+      <span class="modifier_kind">
+        <span class="modifier">abstract </span>
+        <span class="kind">class</span>
+      </span>
+      <span class="symbol">
+        <a title="Wrapper class to add basic functionality to roles and its players as unified types." href="IPlayer.html"><span class="name">IPlayer</span></a><span class="tparams">[<span name="T">T &lt;: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>]</span><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
+      </span>
+      
+      <p class="shortcomment cmt">Wrapper class to add basic functionality to roles and its players as unified types.</p><div class="fullcomment"><div class="comment cmt"><p>Wrapper class to add basic functionality to roles and its players as unified types.
+</p></div><dl class="paramcmts block"><dt class="tparam">T</dt><dd class="cmt"><p>type of wrapped object</p></dd></dl></div>
     </li><li name="scroll.internal.MultiCompartment" visbl="pub" class="indented0 " data-isabs="true" fullComment="yes" group="Ungrouped">
       <a id="MultiCompartmentextendsCompartment"></a><a id="MultiCompartment:MultiCompartment"></a>
       <span class="permalink">
