--- a/scroll/internal/support/QueryStrategies$WithResult.html
+++ b/scroll/internal/support/QueryStrategies$WithResult.html
@@ -458,9 +458,9 @@ object or the return value of one of its functions.
       
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Any</dd></dl></div>
     </li><li name="scroll.internal.support.QueryStrategies.WithResult#matches" visbl="pub" class="indented0 " data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="matches(on:Any):Boolean"></a><a id="matches(Any):Boolean"></a>
+      <a id="matches(on:AnyRef):Boolean"></a><a id="matches(AnyRef):Boolean"></a>
       <span class="permalink">
-      <a href="../../../scroll/internal/support/QueryStrategies$WithResult.html#matches(on:Any):Boolean" title="Permalink">
+      <a href="../../../scroll/internal/support/QueryStrategies$WithResult.html#matches(on:AnyRef):Boolean" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -469,7 +469,7 @@ object or the return value of one of its functions.
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">matches</span><span class="params">(<span name="on">on: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.Any" class="extype" name="scala.collection.immutable.List">Any</a></span>)</span><span class="result">: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/Boolean.html#scala.Boolean" class="extype" name="scala.Boolean">Boolean</a></span>
+        <span class="name">matches</span><span class="params">(<span name="on">on: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>)</span><span class="result">: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/Boolean.html#scala.Boolean" class="extype" name="scala.Boolean">Boolean</a></span>
       </span>
       
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="scroll.internal.support.QueryStrategies.WithResult">WithResult</a> → <a href="QueryStrategies$RoleQueryStrategy.html" class="extype" name="scroll.internal.support.QueryStrategies.RoleQueryStrategy">RoleQueryStrategy</a></dd></dl></div>
