--- a/scroll/internal/support/QueryStrategies.html
+++ b/scroll/internal/support/QueryStrategies.html
@@ -125,8 +125,8 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li><li class="current-entities indented3">
                         <a class="object" href="DispatchQuery$.html" title="Companion object for scroll.internal.support.DispatchQuery providing some static dispatch functions and a fluent dispatch query creation API."></a>
-                        <a class="class" href="DispatchQuery.html" title="Composed dispatch query, i.e."></a>
-                        <a href="DispatchQuery.html" title="Composed dispatch query, i.e.">DispatchQuery</a>
+                        <a class="class" href="DispatchQuery.html" title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges."></a>
+                        <a href="DispatchQuery.html" title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges.">DispatchQuery</a>
                       </li><li class="current-entities indented3">
                         <span class="separator"></span>
                         <a class="trait" href="" title="Allows to write queries looking for the content of an attribute of the certain role playing object or the return value of one of its functions."></a>
