--- a/scroll/internal/support/Relationships.html
+++ b/scroll/internal/support/Relationships.html
@@ -125,8 +125,8 @@ things like <a href="" class="extype" name="scroll.internal.support.Relationship
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li><li class="current-entities indented3">
                         <a class="object" href="DispatchQuery$.html" title="Companion object for scroll.internal.support.DispatchQuery providing some static dispatch functions and a fluent dispatch query creation API."></a>
-                        <a class="class" href="DispatchQuery.html" title="Composed dispatch query, i.e."></a>
-                        <a href="DispatchQuery.html" title="Composed dispatch query, i.e.">DispatchQuery</a>
+                        <a class="class" href="DispatchQuery.html" title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges."></a>
+                        <a href="DispatchQuery.html" title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges.">DispatchQuery</a>
                       </li><li class="current-entities indented3">
                         <span class="separator"></span>
                         <a class="trait" href="QueryStrategies.html" title="Allows to write queries looking for the content of an attribute of the certain role playing object or the return value of one of its functions."></a>
@@ -238,9 +238,9 @@ things like <a href="" class="extype" name="scroll.internal.support.Relationship
         <div id="types" class="types members">
               <h3>Type Members</h3>
               <ol><li name="scroll.internal.support.Relationships.Relationship" visbl="pub" class="indented0 " data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="Relationship[L,R]extendsAnyRef"></a><a id="Relationship[L,R]:Compartment.Relationship[L,R]"></a>
+      <a id="Relationship[L&lt;:AnyRef,R&lt;:AnyRef]extendsAnyRef"></a><a id="Relationship[L&lt;:AnyRef,R&lt;:AnyRef]:Compartment.Relationship[L,R]"></a>
       <span class="permalink">
-      <a href="../../../scroll/internal/support/Relationships.html#Relationship[L,R]extendsAnyRef" title="Permalink">
+      <a href="../../../scroll/internal/support/Relationships.html#Relationship[L&lt;:AnyRef,R&lt;:AnyRef]extendsAnyRef" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -249,7 +249,7 @@ things like <a href="" class="extype" name="scroll.internal.support.Relationship
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a title="Class representation of a relationship between two (role) types." href="Relationships$Relationship.html"><span class="name">Relationship</span></a><span class="tparams">[<span name="L">L</span>, <span name="R">R</span>]</span><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
+        <a title="Class representation of a relationship between two (role) types." href="Relationships$Relationship.html"><span class="name">Relationship</span></a><span class="tparams">[<span name="L">L &lt;: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>, <span name="R">R &lt;: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>]</span><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
       </span>
       
       <p class="shortcomment cmt">Class representation of a relationship between two (role) types.</p><div class="fullcomment"><div class="comment cmt"><p>Class representation of a relationship between two (role) types.
