--- a/scroll/internal/support/index.html
+++ b/scroll/internal/support/index.html
@@ -221,8 +221,8 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll.internal">internal</a></dd></dl></div>
     </li><li class="current-entities indented3">
                         <a class="object" href="DispatchQuery$.html" title="Companion object for scroll.internal.support.DispatchQuery providing some static dispatch functions and a fluent dispatch query creation API."></a>
-                        <a class="class" href="DispatchQuery.html" title="Composed dispatch query, i.e."></a>
-                        <a href="DispatchQuery.html" title="Composed dispatch query, i.e.">DispatchQuery</a>
+                        <a class="class" href="DispatchQuery.html" title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges."></a>
+                        <a href="DispatchQuery.html" title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges.">DispatchQuery</a>
                       </li><li class="current-entities indented3">
                         <span class="separator"></span>
                         <a class="trait" href="QueryStrategies.html" title="Allows to write queries looking for the content of an attribute of the certain role playing object or the return value of one of its functions."></a>
@@ -360,11 +360,10 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a title="Composed dispatch query, i.e." href="DispatchQuery.html"><span class="name">DispatchQuery</span></a><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
+        <a title="Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges." href="DispatchQuery.html"><span class="name">DispatchQuery</span></a><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
       </span>
       
-      <p class="shortcomment cmt">Composed dispatch query, i.e.</p><div class="fullcomment"><div class="comment cmt"><p>Composed dispatch query, i.e. applying the composition of all dispatch queries the given set of edges
-through the function <a href="DispatchQuery.html#filter(anys:Seq[Any]):Seq[Any]" class="extmbr" name="scroll.internal.support.DispatchQuery#filter">DispatchQuery.filter</a>.
+      <p class="shortcomment cmt">Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges.</p><div class="fullcomment"><div class="comment cmt"><p>Composed dispatch query, i.e., applying the composition of all dispatch queries the given set of edges.
 All provided queries must be side-effect free!
 </p></div></div>
     </li><li name="scroll.internal.support.QueryStrategies" visbl="pub" class="indented0 " data-isabs="true" fullComment="no" group="Ungrouped">
