--- a/scroll/internal/support/Relationships$Relationship.html
+++ b/scroll/internal/support/Relationships$Relationship.html
@@ -169,7 +169,7 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <span class="name">Relationship</span><span class="tparams">[<span name="L">L</span>, <span name="R">R</span>]</span><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
+        <span class="name">Relationship</span><span class="tparams">[<span name="L">L &lt;: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>, <span name="R">R &lt;: <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>]</span><span class="result"> extends <a href="http://scala-lang.org/files/archive/api/2.12.4/scala/collection/immutable/List.html#scala.AnyRef" class="extype" name="scala.collection.immutable.List">AnyRef</a></span>
       </span>
       </h4>
 
