- updated to latest SCROLL release

--- a/scroll/internal/ICompartment$IPlayer$TransferToBuilder.html
+++ b/scroll/internal/ICompartment$IPlayer$TransferToBuilder.html
@@ -105,9 +105,9 @@ implementing an objectified collaboration with a limited number of participating
 implementing an objectified collaboration with a limited number of participating roles and a fixed scope.
 </p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../index.html" class="extype" name="scroll">scroll</a></dd></dl></div>
     </li><li name="scroll.internal.ICompartment" visbl="pub" class="indented3 " data-isabs="true" fullComment="yes" group="Ungrouped">
-      <a id="ICompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithCompartmentRelationswithQueryStrategieswithRoleQuerieswithPlayerEqualitywithUnionTypes.RoleUnionTypes"></a><a id="ICompartment:ICompartment"></a>
+      <a id="ICompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithCompartmentRelationswithQueryStrategieswithRoleQuerieswithPlayerEqualitywithUnionTypes.RoleUnionTypeswithHasRoleGraph"></a><a id="ICompartment:ICompartment"></a>
       <span class="permalink">
-      <a href="../../scroll/internal/index.html#ICompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithCompartmentRelationswithQueryStrategieswithRoleQuerieswithPlayerEqualitywithUnionTypes.RoleUnionTypes" title="Permalink">
+      <a href="../../scroll/internal/index.html#ICompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithCompartmentRelationswithQueryStrategieswithRoleQuerieswithPlayerEqualitywithUnionTypes.RoleUnionTypeswithHasRoleGraph" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -116,7 +116,7 @@ implementing an objectified collaboration with a limited number of participating
         <span class="kind">trait</span>
       </span>
       <span class="symbol">
-        <a title="Interface for implementing an objectified collaboration with a limited number of participating roles and a fixed scope." href="ICompartment.html"><span class="name">ICompartment</span></a><span class="result"> extends <a href="support/RoleConstraints.html" class="extype" name="scroll.internal.support.RoleConstraints">RoleConstraints</a> with <a href="support/RoleRestrictions.html" class="extype" name="scroll.internal.support.RoleRestrictions">RoleRestrictions</a> with <a href="support/RoleGroups.html" class="extype" name="scroll.internal.support.RoleGroups">RoleGroups</a> with <a href="support/Relationships.html" class="extype" name="scroll.internal.support.Relationships">Relationships</a> with <a href="support/CompartmentRelations.html" class="extype" name="scroll.internal.support.CompartmentRelations">CompartmentRelations</a> with <a href="support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a> with <a href="support/RoleQueries.html" class="extype" name="scroll.internal.support.RoleQueries">RoleQueries</a> with <a href="support/PlayerEquality.html" class="extype" name="scroll.internal.support.PlayerEquality">PlayerEquality</a> with <a href="support/UnionTypes$$RoleUnionTypes.html" class="extype" name="scroll.internal.support.UnionTypes.RoleUnionTypes">RoleUnionTypes</a></span>
+        <a title="Interface for implementing an objectified collaboration with a limited number of participating roles and a fixed scope." href="ICompartment.html"><span class="name">ICompartment</span></a><span class="result"> extends <a href="support/RoleConstraints.html" class="extype" name="scroll.internal.support.RoleConstraints">RoleConstraints</a> with <a href="support/RoleRestrictions.html" class="extype" name="scroll.internal.support.RoleRestrictions">RoleRestrictions</a> with <a href="support/RoleGroups.html" class="extype" name="scroll.internal.support.RoleGroups">RoleGroups</a> with <a href="support/Relationships.html" class="extype" name="scroll.internal.support.Relationships">Relationships</a> with <a href="support/CompartmentRelations.html" class="extype" name="scroll.internal.support.CompartmentRelations">CompartmentRelations</a> with <a href="support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a> with <a href="support/RoleQueries.html" class="extype" name="scroll.internal.support.RoleQueries">RoleQueries</a> with <a href="support/PlayerEquality.html" class="extype" name="scroll.internal.support.PlayerEquality">PlayerEquality</a> with <a href="support/UnionTypes$$RoleUnionTypes.html" class="extype" name="scroll.internal.support.UnionTypes.RoleUnionTypes">RoleUnionTypes</a> with <a href="graph/HasRoleGraph.html" class="extype" name="scroll.internal.graph.HasRoleGraph">HasRoleGraph</a></span>
       </span>
       
       <p class="shortcomment cmt">Interface for implementing an objectified collaboration with a limited number of participating roles and a fixed scope.</p><div class="fullcomment"><div class="comment cmt"><p>Interface for implementing an objectified collaboration with a limited number of participating roles and a fixed scope.
@@ -221,9 +221,9 @@ implementing an objectified collaboration with a limited number of participating
         <div id="constructors" class="members">
               <h3>Instance Constructors</h3>
               <ol><li name="scroll.internal.ICompartment.IPlayer.TransferToBuilder#&lt;init&gt;" visbl="pub" class="indented0 " data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="&lt;init&gt;(role:R)(implicitevidence$16:scala.reflect.ClassTag[R]):IPlayer.this.TransferToBuilder[R]"></a><a id="&lt;init&gt;:T.TransferToBuilder[R]"></a>
+      <a id="&lt;init&gt;(role:R)(implicitevidence$11:scala.reflect.ClassTag[R]):IPlayer.this.TransferToBuilder[R]"></a><a id="&lt;init&gt;:T.TransferToBuilder[R]"></a>
       <span class="permalink">
-      <a href="../../scroll/internal/ICompartment$IPlayer$TransferToBuilder.html#&lt;init&gt;(role:R)(implicitevidence$16:scala.reflect.ClassTag[R]):IPlayer.this.TransferToBuilder[R]" title="Permalink">
+      <a href="../../scroll/internal/ICompartment$IPlayer$TransferToBuilder.html#&lt;init&gt;(role:R)(implicitevidence$11:scala.reflect.ClassTag[R]):IPlayer.this.TransferToBuilder[R]" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
@@ -513,9 +513,9 @@ implementing an objectified collaboration with a limited number of participating
       
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
     </li><li name="scroll.internal.ICompartment.IPlayer.TransferToBuilder#to" visbl="pub" class="indented0 " data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="to[P&lt;:AnyRef](player:P)(implicitevidence$17:scala.reflect.ClassTag[P]):Unit"></a><a id="to[P&lt;:AnyRef](P)(ClassTag[P]):Unit"></a>
+      <a id="to[P&lt;:AnyRef](player:P)(implicitevidence$12:scala.reflect.ClassTag[P]):Unit"></a><a id="to[P&lt;:AnyRef](P)(ClassTag[P]):Unit"></a>
       <span class="permalink">
-      <a href="../../scroll/internal/ICompartment$IPlayer$TransferToBuilder.html#to[P&lt;:AnyRef](player:P)(implicitevidence$17:scala.reflect.ClassTag[P]):Unit" title="Permalink">
+      <a href="../../scroll/internal/ICompartment$IPlayer$TransferToBuilder.html#to[P&lt;:AnyRef](player:P)(implicitevidence$12:scala.reflect.ClassTag[P]):Unit" title="Permalink">
         <i class="material-icons"></i>
       </a>
     </span>
